Added xsd:boolean data type for bindings, added remaining (known) necessary permissions for running ActiveRDF in jruby-engine.